Add generic cover for albums with no art

--- a/grails-app/assets/stylesheets/player.css
+++ b/grails-app/assets/stylesheets/player.css
@@ -284,6 +284,10 @@ i.fa-forward {
   color: #888;
 }
 
+#playlist .song .duration {
+  display: none;
+}
+
 #playlist .song .duration, #playlist .song #played_duration {
   float: right;
 }
